JumpScript/tests/baselines/reference/parserInterfaceDeclaration6.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration6.jump(1,8): error TS1030: 'export' modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration6.jump (1 errors) ====
    export export interface I {
           ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    }